--- a/Css/styles.css
+++ b/Css/styles.css
@@ -82,13 +82,13 @@ body {
     margin: auto;
   }
   .calculator-grid {
-    margin-top: 5rem;
+   margin-top: 5rem;
     display: grid;
-    grid-template-rows: repeat(6, 70px);
-    grid-template-columns: repeat(4, 70px);
+    grid-template-rows: repeat(6, 77px);
+    grid-template-columns: repeat(4, 77px);
     grid-row-gap: 2rem;
     grid-column-gap: 1.4rem;
-    /* margin-left: 1rem; */
+    margin-left: 1.5rem;
   }
 
   .result {
